--- a/index.html
+++ b/index.html
@@ -11,35 +11,40 @@
     <h1>Letícia Gomes C. S.</h1>
     <p>Data & Analytics Engineer | Machine Learning | Cloud Computer | MLOps</p>
     <nav>
-      <a href="#projetos">Projetos</a>
-      <a href="#sobre">Sobre</a>
-      <a href="#contato">Contato</a>
+      <a href="#projetos">Projects</a>
+      <a href="#sobre">About me</a>
+      <a href="#contato">Contacts</a>
     </nav>
   </header>
 
   <section id="projetos">
-    <h2>Projetos em Destaque</h2>
+    <h2>Projects</h2>
     <ul>
-      <li><a href="https://github.com/leticiagcsilva/smartmaint">🛠️ SmartMaint</a> — Manutenção preditiva com sensores e ML</li>
-      <li><a href="https://github.com/leticiagcsilva/statistics_for_data_science">📊 Estatística para Ciência de Dados</a> — Estudos aplicados com dados reais</li>
+      <li><a href="https://github.com/leticiagcsilva/data_engineering/tree/main/etl_ANEEL_AWS">⚡️ ETL of ANEEL Complaint Data to AWS</a></li>
+      <li><a href="https://github.com/leticiagcsilva/data_engineering/tree/main/climate_data_pipeline">🌦️ Climate Data Pipeline</a> — Weather in Northeast Brazil Capitals (2020–2024)</li>
+      <li><a href="https://github.com/leticiagcsilva/statistics_for_data_science/blob/main/notebooks/1.2_location_variability_estimators.ipynb"></a>📊 Robust Log Metrics</a> — Statistical estimators applied to Apache logs for SLO-aware observability</li>
     </ul>
   </section>
 
   <section id="sobre">
-    <h2>Sobre Mim</h2>
+    <h2>About me</h2>
     <p>
-      Sou engenheira de dados e cientista de dados com experiência em pipelines de dados, deploy de modelos de ML, MLOps, visualização com Looker Studio e arquitetura em GCP e AWS. 
+      Data & Analytics Engineer at Mercado Livre, working in the Intelligence Operations team for Fury services. Experience in data architecture and Machine Learning in production, leveraging GCP and AWS, MLflow for model tracking, GitHub for version control, and messaging systems like Pub/Sub and Kafka.
+
+      Focused on ETL/ELT, exploratory data analysis, data visualization (Looker Studio, Power BI), Machine Learning model development, and deployment. Expertise in supervised and unsupervised models, Deep Learning, time series, and generative AI, ensuring monitoring, retraining, and scalability in production.
+
+      Experience across industries including education, marketing, engineering, optimization, fraud prevention, and academic research. Generalist, impact-driven professional, developing scalable, data-driven solutions to support decision-making.
     </p>
   </section>
 
   <section id="contato">
-    <h2>Contato</h2>
+    <h2>Contacts</h2>
     <p>leticiagomes.datascience@gmail.com</p>
     <p>
-      <a href="https://linkedin.com/in/leticia-gomescsilva">LinkedIn</a> |
+      <a href="https://www.linkedin.com/in/leticia-gomescsilva/">LinkedIn</a> |
       <a href="https://github.com/leticiagcsilva">GitHub</a> |
-      <a href="https://twitter.com/leticiagcs">Twitter</a> |
-      <a href="https://instagram.com/leticiagcs">Instagram</a>
+      <a href="https://twitter.com/Letsdados">Twitter</a> |
+      <a href="https://www.instagram.com/lets.gomesds/">Instagram</a>
     </p>
   </section>
 
