--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <ul>
       <li><a href="https://github.com/leticiagcsilva/data_engineering/tree/main/etl_ANEEL_AWS">⚡️ ETL of ANEEL Complaint Data to AWS</a></li>
       <li><a href="https://github.com/leticiagcsilva/data_engineering/tree/main/climate_data_pipeline">🌦️ Climate Data Pipeline</a> — Weather in Northeast Brazil Capitals (2020–2024)</li>
-      <li><a href="https://github.com/leticiagcsilva/statistics_for_data_science/blob/main/notebooks/1.2_location_variability_estimators.ipynb"></a>📊 Robust Log Metrics</a> — Statistical estimators applied to Apache logs for SLO-aware observability</li>
+      <li><a href="https://github.com/leticiagcsilva/statistics_for_data_science/blob/main/notebooks/1.2_location_variability_estimators.ipynb">📊 Robust Log Metrics</a> — Statistical estimators applied to Apache logs for SLO-aware observability</li>
     </ul>
   </section>
 
